--- a/GEMSFINAL/examples/main.css
+++ b/GEMSFINAL/examples/main.css
@@ -41,7 +41,7 @@ button {
 }
 
 button:hover {
-	background-color: pink;
+	background-color: red;
 }
 
 
@@ -58,18 +58,16 @@ input {
 
 
 canvas {
-	width: 100vw;
-	height: 100vh;
+	width: 90vw;
+	height: 90vh;
 	position: absolute;
-	width: 30vw;
-	height: 99vh;
 	border: 5px solid black;
 	z-index: -2;
 }
 
 #creditClick:hover {
 	cursor: pointer;
-	color: lightblue;
+	color: red;
 	font-size:18px;
 }
 
@@ -104,9 +102,10 @@ h5 {
 
 #userInput {
 	z-index: 1000;
+/*  	background: rgba(0, 0, 0, 0);*/
 	background-color: white;
 	width: 33vw;
-	height: 99vh;
+	height: 99.2vh;
 	font-size: 18px;
 	font-family: tofino, helvetica;
 	border: 5px solid black;
@@ -129,7 +128,7 @@ h5 {
 a:hover {
 	font-size: 14px;
 	font-family: helvetica;
-	color: pink;
+	color: red;
 }
 
 a:link {
