--- a/SITE/examples/main.css
+++ b/SITE/examples/main.css
@@ -97,6 +97,7 @@ button {
 	margin-top: 60vh;
 	margin-left: 50vw;
 	position: absolute;
+	background-color: transparent;
 }
 
 #bt1:hover{
@@ -110,6 +111,7 @@ button {
 	margin-top: 5vh;
 	margin-left: 20vw;
 	position: absolute;
+	background-color: transparent;
 }
 
 #bt2:hover{
@@ -123,7 +125,7 @@ button {
 	margin-top: 20vh;
 	margin-left: 70vw;
 	position: absolute;
-	background-color: white;
+	background-color: transparent;
 }
 
 #bt3:hover {
