--- a/SITE/examples/main.css
+++ b/SITE/examples/main.css
@@ -176,7 +176,7 @@ button {
 #container {
 /*	margin-left: 45vw;
 	margin-top: 45vh;*/
-
+	margin: 0 auto;
 	z-index: 10;
 	width: 100vw;
 	height: 100vh;
