--- a/BWD/style.css
+++ b/BWD/style.css
@@ -126,7 +126,7 @@ body {
     height: 100px;
     color: black;
     line-height: 30%;
-    font-size: 0.8vw;
+    font-size: 20px;
     font-family: fluro;
     left: 100px;
     display: none;
