--- a/FIRE_ESCAPE/main.css
+++ b/FIRE_ESCAPE/main.css
@@ -52,7 +52,7 @@ h2 {
 	position: fixed;
 }
 
-input {
+.name input {
 	border: 2px solid black;
 	width: 50vw;
 	height: 20hv;
@@ -157,6 +157,12 @@ iframe {
 	box-shadow:  0 0 1em blue, 0 0 0.2em blue;
 	cursor: pointer;
 	background-color: pink;
+}
+
+#walk {
+	top: 30vh;
+	left: 30vw;
+	display: none;
 }
 
 #letter_btn {
@@ -303,4 +309,42 @@ body {
     top: 0;
     background-size: cover;
     background-image: url('bluesky/sky_00000.jpg');
+}
+
+
+
+
+.wiggle:hover {
+  -webkit-animation-name: wiggle;
+  -ms-animation-name: wiggle;
+  -ms-animation-duration: 1000ms;
+  -webkit-animation-duration: 1000ms;
+  -webkit-animation-iteration-count: 1;
+  -ms-animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in-out;
+  -ms-animation-timing-function: ease-in-out;
+}
+
+@-webkit-keyframes wiggle {
+  0% {-webkit-transform: rotate(10deg);}
+  25% {-webkit-transform: rotate(-10deg);}
+  50% {-webkit-transform: rotate(20deg);}
+  75% {-webkit-transform: rotate(-5deg);}
+  100% {-webkit-transform: rotate(0deg);}
+}
+
+@-ms-keyframes wiggle {
+  0% {-ms-transform: rotate(1deg);}
+  25% {-ms-transform: rotate(-1deg);}
+  50% {-ms-transform: rotate(1.5deg);}
+  75% {-ms-transform: rotate(-5deg);}
+  100% {-ms-transform: rotate(0deg);}
+}
+
+@keyframes wiggle {
+  0% {transform: rotate(10deg);}
+  25% {transform: rotate(-10deg);}
+  50% {transform: rotate(20deg);}
+  75% {transform: rotate(-5deg);}
+  100% {transform: rotate(0deg);}
 }
