--- a/FIRE_ESCAPE/main.css
+++ b/FIRE_ESCAPE/main.css
@@ -307,7 +307,13 @@ form {
 	color: black;
 	font-family: agrandir-regular; 
 	font-size: 20px;
+	height: 50px;
+	width: 95%;
+}
 
+#letter_button:hover {
+	background-color: black;
+	color: white;
 }
 
 #thought_btn {
