--- a/FIRE_ESCAPE/main.css
+++ b/FIRE_ESCAPE/main.css
@@ -94,6 +94,7 @@ button:hover {
 	margin-left: 100px;
 	color: black;
   text-shadow: 2px 2px 5px white;
+  display: none;
 }
 
 iframe {
@@ -118,7 +119,7 @@ iframe {
 	background-color: black;
 	border-radius: 50%;
 	z-index: 100;
-	display: inline-block;
+	display: block;
 	position: fixed;
 	margin: 7px;
 }
