--- a/FIRE_ESCAPE/main.css
+++ b/FIRE_ESCAPE/main.css
@@ -218,6 +218,8 @@ iframe {
 #people_watch_btn:hover {
 	box-shadow:  0 0 1em white, 0 0 0.2em white;
 	cursor: pointer;
+	color: white;
+	border: 2px solid white;
 }
 
 #people_watch {
@@ -248,6 +250,8 @@ iframe {
 #walk_btn:hover {
 	box-shadow:  0 0 1em white, 0 0 0.2em white;
 	cursor: pointer;
+	color: white;
+	border: 2px solid white;
 }
 
 #walk {
@@ -277,9 +281,9 @@ iframe {
 
 #letter_btn:hover {
 	box-shadow:  0 0 1em white, 0 0 0.2em white;
-	background-color: black;
-	color: white;
 	cursor: pointer;
+	color: white;
+	border: 2px solid white;
 }
 
 
@@ -337,6 +341,8 @@ form {
 #thought_btn:hover {
 	box-shadow:  0 0 1em white, 0 0 0.2em white;
 	cursor: pointer;
+	color: white;
+	border: 2px solid white;
 }
 
 #thought {
