--- a/FIRE_ESCAPE/main.css
+++ b/FIRE_ESCAPE/main.css
@@ -50,6 +50,8 @@ h2 {
 	z-index: 100;
 	display: block;
 	position: fixed;
+
+
 /*	background-image: url("images/sky.gif");
 */}
 
@@ -95,6 +97,8 @@ button:hover {
 	color: black;
   text-shadow: 2px 2px 5px white;
   display: none;
+    letter-spacing: 2px;
+
 }
 
 iframe {
