--- a/PORTFOLIO_SITE/examples/main.css
+++ b/PORTFOLIO_SITE/examples/main.css
@@ -128,7 +128,7 @@ body, html {
 
 #title {
 	font-size:100px;
-	font-family: syne, bitmap, helvetica;
+	font-family: bitmap, helvetica;
 	position: fixed;
 	z-index: 20;
     animation: title 10s infinite;
