--- a/PORTFOLIO_SITE/examples/main.css
+++ b/PORTFOLIO_SITE/examples/main.css
@@ -127,7 +127,8 @@ body, html {
 }
 
 #title {
-	font-size:75px;
+	font-size:5vh;
+	width:  60vw;
 	font-family: syne, helvetica;
 	position: fixed;
 	z-index: 20;
