--- a/PORTFOLIO_SITE/examples/main.css
+++ b/PORTFOLIO_SITE/examples/main.css
@@ -127,7 +127,7 @@ body, html {
 }
 
 #title {
-	font-size:2vh;
+	font-size:6vh;
 	width:  60vw;
 	font-family: syne, helvetica;
 	position: fixed;
@@ -335,7 +335,8 @@ body {
 }
 
 #title {
-	font-size: 20px;
+	font-size: 6vh;
+	width: 80vw;
 	font-family: syne, helvetica;
 	position: absolute;
 	z-index: 20;
